Changed tree css
changed tree css of branch tree and swing to look right on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -74,7 +74,7 @@ nav {
   background: var(--white-color);
   color: var(--black-color);
   display: grid;
-  grid-template-columns: 150px 2fr;
+  grid-template-columns: 125px 2fr;
   z-index: 1
 }
 
@@ -155,6 +155,9 @@ nav {
 }
 
 @media(min-width: 850px) {
+  .intro {
+    grid-template-columns: 150px 2fr;
+  }
   .intro-header {
     font-size: 3rem;
   }
