--- a/src/css/Tree.css
+++ b/src/css/Tree.css
@@ -12,7 +12,7 @@
 .tree {
     content: "";
     background-color: var(--brown-color);
-    width: 150px;
+    width: 125px;
     min-height: 100vh;
     box-shadow: 3px 3px 6px 0px rgb(109, 80, 40) inset, -3px -3px 6px 1px rgba(0, 0, 0, 0.774) inset;
   }
@@ -35,7 +35,7 @@
     height: 25px;
     position: absolute;
     right: 0px;
-    top: 70px;
+    top: 60px;
     background: var(--brown-color);
     transform: rotate(20deg);
     border-radius: var(--border-radius);
@@ -58,16 +58,16 @@
   .swing {
     display: flex;
     content: "";
-    width: 200px;
+    width: 150px;
     min-height: 300px;
-    margin-left: 200px;
+    margin-left: 150px;
     margin-top: -10px;
     border-left: 10px solid #6C452D;
     border-right: 10px solid #6C452D;
   }
   .swing-seat {
     justify-content: center;
-    align-self: end;
+    align-self: flex-end;
     content: "";
     width: 100%;
     height: 50px;
@@ -81,6 +81,9 @@
   }
 
   @media(min-width: 725px) {
+    .tree {
+      width: 150px;
+    }
     .branch {
       margin-top: 200px;
     }
@@ -93,6 +96,7 @@
       left: 150px;
     }
     .swing {
+      width: 200px;
       margin-left: 300px;
       min-height: 400px;
     }
